fixed text-align of new channel container

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -449,3 +449,7 @@ background-repeat: no-repeat;
   top:15px;
 }
 
+
+.newChannelHeader {
+  text-align:center;
+}
